--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "自造js轮子",
   "main": "index.js",
   "scripts": {
-    "test": "mocha --compilers js:babel-core/register"
+    "test": "mocha --compilers js:babel-core/register && promises-aplus-tests test/promise-a-plus-test-adapter.js"
   },
   "repository": {
     "type": "git",
@@ -23,7 +23,9 @@
     "babel-core": "^6.23.1",
     "babel-polyfill": "^6.23.0",
     "babel-preset-es2015": "^6.22.0",
+    "babel-register": "^6.23.0",
     "chai": "^3.5.0",
-    "mocha": "^3.2.0"
+    "mocha": "^3.2.0",
+    "promises-aplus-tests": "*"
   }
 }
