--- a/package.json
+++ b/package.json
@@ -1,29 +1,41 @@
 {
-  "name": "js-wheel",
+  "name": "cheno",
   "version": "1.0.0",
-  "description": "自造js轮子",
-  "main": "index.js",
+  "description": "自造Promise轮子",
+  "main": "./src/promise.js",
   "scripts": {
-    "test": "mocha --compilers js:babel-core/register"
+    "test": "mocha --compilers js:babel-core/register test/nodejs",
+    "eslint": "eslint ./src"
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/listenlin/js-wheel.git"
+    "url": "git+https://github.com/listenlin/cheno.git"
   },
   "keywords": [
-    "wheel"
+    "cheno",
+    "Promise",
+    "promises-aplus"
   ],
-  "author": "listenlin",
+  "author": {
+    "name": "listenlin",
+    "email": "listenlin521@foxmail.com"
+  },
   "license": "MIT",
   "bugs": {
-    "url": "https://github.com/listenlin/js-wheel/issues"
+    "url": "https://github.com/listenlin/cheno/issues"
   },
-  "homepage": "https://github.com/listenlin/js-wheel#readme",
+  "homepage": "https://github.com/listenlin/cheno#readme",
   "devDependencies": {
     "babel-core": "^6.23.1",
     "babel-polyfill": "^6.23.0",
     "babel-preset-es2015": "^6.22.0",
+    "babelify": "^7.3.0",
+    "browserify": "^14.1.0",
     "chai": "^3.5.0",
+    "eslint": "^3.17.1",
+    "gulp": "^3.9.1",
+    "gulp-babel": "^6.1.2",
+    "gulp-webserver": "^0.9.1",
     "mocha": "^3.2.0",
     "promises-aplus-tests": "*"
   }
