--- a/package.json
+++ b/package.json
@@ -1,42 +1,41 @@
 {
-  "name": "cheno",
-  "version": "1.0.0",
-  "description": "自造Promise轮子",
-  "main": "./src/promise.js",
-  "scripts": {
-    "test": "mocha --compilers js:babel-core/register test/nodejs",
-    "eslint": "eslint ./src"
-  },
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/listenlin/cheno.git"
-  },
-  "keywords": [
-    "cheno",
-    "Promise",
-    "promises-aplus"
-  ],
-  "author": {
-    "name": "listenlin",
-    "email": "listenlin521@foxmail.com"
-  },
-  "license": "MIT",
-  "bugs": {
-    "url": "https://github.com/listenlin/cheno/issues"
-  },
-  "homepage": "https://github.com/listenlin/cheno#readme",
-  "devDependencies": {
-    "babel-core": "^6.23.1",
-    "babel-polyfill": "^6.23.0",
-    "babel-preset-es2015": "^6.22.0",
-    "babelify": "^7.3.0",
-    "browserify": "^14.1.0",
-    "chai": "^3.5.0",
-    "eslint": "^3.17.1",
-    "gulp": "^3.9.1",
-    "gulp-babel": "^6.1.2",
-    "gulp-webserver": "^0.9.1",
-    "mocha": "^3.2.0",
-    "promises-aplus-tests": "*"
-  }
+    "name": "cheno",
+    "version": "1.0.0",
+    "description": "自造Promise轮子",
+    "main": "./src/promise.js",
+    "scripts": {
+        "test": "mocha --compilers js:babel-core/register test/nodejs && browserify --t babelify test/browser/tests.js > test/browser/promise.tests.js && gulp testInBrowser",
+        "eslint": "eslint ./src"
+    },
+    "repository": {
+        "type": "git",
+        "url": "git+https://github.com/listenlin/cheno.git"
+    },
+    "keywords": [
+        "cheno",
+        "Promise",
+        "promises-aplus"
+    ],
+    "author": {
+        "name": "listenlin",
+        "email": "listenlin521@foxmail.com"
+    },
+    "license": "MIT",
+    "bugs": {
+        "url": "https://github.com/listenlin/cheno/issues"
+    },
+    "homepage": "https://github.com/listenlin/cheno#readme",
+    "devDependencies": {
+        "babel-core": "^6.23.1",
+        "babel-polyfill": "^6.23.0",
+        "babel-preset-es2015": "^6.22.0",
+        "babelify": "^7.3.0",
+        "browserify": "^14.1.0",
+        "chai": "^3.5.0",
+        "eslint": "^3.17.1",
+        "gulp": "^3.9.1",
+        "gulp-webserver": "^0.9.1",
+        "mocha": "^3.2.0",
+        "promises-aplus-tests": "*"
+    }
 }
